init top 10 holo in api